<resources>
    <string name="app_name">Smart House</string>
    <string name="otra_actividad">otra_actividad</string>
    <string name="otra_actividad2">otra actividad 2</string>
    <string name="nombre"> Nombre</string>
    <string name="apellido"> Apellido</string>
    <string name="cedula"> Cedula</string>
    <string name="telefono"> Telefono</string>
    <string name="correo"> Correo</string>
    <string name="contrasena"> Contraseña</string>
    <string name="Rcontrasena"> Confirmar Contraseña</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer </string>
    <string name="paisdenacimiento">Pais de Nacimiento</string>
    <string name="terminos">Leer terminos y condiciones</string>
    <string name="REGISTRO">No tienes cuenta\n registrate Click aqui</string>
    <string-array name="Paises">
        <item>Pais de Nacimiento</item>
        <item>EEUU</item>
        <item>MEXICO</item>
        <item>COLOMBIA</item>
        <item>VENEZUELA</item>
        <item>BRASIL</item>
        <item>PERU</item>
        <item>ECUADOR</item>
        <item>BOLIVIA</item>
        <item>ARGENTINA</item>
        <item>CHILE</item>
    </string-array>
    <string name="title_activity_main_fragment">MainActivity</string>
    <string name="title_principal">Principal</string>
    <string name="title_dispositivos">Dispositivos</string>
    <string name="title_notification">Chat y Notificaciones</string>
    <string name="title_musica">Musica</string>
    <string name="title_mascotas">Mascotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal">principal</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="notification">Chats</string>
    <string name="musica">Musica</string>
    <string name="mascotas">mascotas</string>
    <string name="perfil">Perfil</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="Led">led</string>
    <string name="door">Door</string>
    <string name="ventilador">Ventilador</string>
    <string name="temperatura">Temperatura</string>
    <string name="nuevasmascotas">Nueva mascota</string>
    <string name="genero">Genero</string>
    <string name="ciudad">Ciudad</string>
    <string name="fechadenacimiento">Fecha de nacimiento</string>
    <string name="usuariosregistrados">Usuarios Registrados</string>
    <string name="edad">Edad</string>
    <string name="cerogramos">0gr</string>
    <string name="reproductor_audio">Reproductor Audio</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string-array name="mascotas">
        <item>Seleccione el tipo de mascota</item>
        <item>Perro</item>
        <item>Gatos</item>
        <item>Aves</item>
        <item>Otros</item>
    </string-array>
</resources>