<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonmenu"
    >
    <item
        android:id="@+id/navigation_dispositivos"
        android:icon="@drawable/ic_divice"
        android:title="@string/dispositivos" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/navigation_principal"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_principal" />
    <item
        android:id="@+id/navigation_musica"
        android:icon="@drawable/ic_play_button"
        android:title="@string/title_musica" />
    <item
        android:id="@+id/navigation_mascotas"
        android:icon="@drawable/ic_pet"
        android:title="@string/title_mascotas" />
</menu>