<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_principal">

    <fragment
        android:id="@+id/navigation_principal"
        android:name="com.daniloosorio.prueba5.fragmentos.PrincipalFragment"
        android:label="@string/principal"
        tools:layout="@layout/fragment_principal" >
        <action
            android:id="@+id/action_navigation_principal_to_navigation_perfil"
            app:destination="@id/navigation_perfil" />
        <action
            android:id="@+id/action_navigation_principal_to_navigation_configuraciones"
            app:destination="@id/navigation_configuraciones" />
        <action
            android:id="@+id/action_navigation_principal_to_navigation_dispositivos"
            app:destination="@id/navigation_dispositivos" />
        <action
            android:id="@+id/action_navigation_principal_to_navigation_notification"
            app:destination="@id/navigation_notification" />
        <action
            android:id="@+id/action_navigation_principal_to_navigation_musica"
            app:destination="@id/navigation_musica" />
        <action
            android:id="@+id/action_navigation_principal_to_navigation_mascotas"
            app:destination="@id/navigation_mascotas" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dispositivos"
        android:name="com.daniloosorio.prueba5.fragmentos.DispositivosFragment"
        android:label="@string/dispositivos"
        tools:layout="@layout/fragment_dispositivos" >
        <action
            android:id="@+id/action_navigation_dispositivos_to_navigation_led"
            app:destination="@id/navigation_led" />
        <action
            android:id="@+id/action_navigation_dispositivos_to_navigation_door"
            app:destination="@id/navigation_door" />
        <action
            android:id="@+id/action_navigation_dispositivos_to_navigation_ventilador"
            app:destination="@id/navigation_ventilador" />
        <action
            android:id="@+id/action_navigation_dispositivos_to_navigation_temp"
            app:destination="@id/navigation_temp" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.daniloosorio.prueba5.fragmentos.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/navigation_musica"
        android:name="com.daniloosorio.prueba5.fragmentos.MusicaFragment"
        android:label="@string/musica"
        tools:layout="@layout/fragment_musica" />
    <fragment
        android:id="@+id/navigation_mascotas"
        android:name="com.daniloosorio.prueba5.fragmentos.mascotasFragment"
        android:label="@string/mascotas"
        tools:layout="@layout/fragment_mascotas" >
        <action
            android:id="@+id/action_navigation_mascotas_to_navigation_nueva_macosta"
            app:destination="@id/navigation_nueva_macosta" />
    </fragment>

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.daniloosorio.prueba5.fragmentos.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/navigation_configuraciones"
        android:name="com.daniloosorio.prueba5.fragmentos.ConfiguracionesFragment"
        android:label="@string/configuraciones"
        tools:layout="@layout/fragment_configuraciones" />
    <fragment
        android:id="@+id/navigation_led"
        android:name="com.daniloosorio.prueba5.fragmentos.ledFragment"
        android:label="@string/Led"
        tools:layout="@layout/fragment_led" />
    <fragment
        android:id="@+id/navigation_door"
        android:name="com.daniloosorio.prueba5.fragmentos.DoorFragment"
        android:label="@string/door"
        tools:layout="@layout/fragment_door" />
    <fragment
        android:id="@+id/navigation_ventilador"
        android:name="com.daniloosorio.prueba5.fragmentos.VentiladorFragment"
        android:label="@string/ventilador"
        tools:layout="@layout/fragment_ventilador" />
    <fragment
        android:id="@+id/navigation_temp"
        android:name="com.daniloosorio.prueba5.fragmentos.TempFragment"
        android:label="@string/temperatura"
        tools:layout="@layout/fragment_temp" />
    <fragment
        android:id="@+id/navigation_nueva_macosta"
        android:name="com.daniloosorio.prueba5.fragmentos.NmascotasFragment"
        android:label="@string/nuevasmascotas"
        tools:layout="@layout/fragment_nmascotas" >
        <action
            android:id="@+id/action_navigation_nueva_macosta_to_navigation_mascotas"
            app:destination="@id/navigation_mascotas" />
    </fragment>
</navigation>